apps/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: examiner
  namespace: apps
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: examiner
                port:
                  number: 80
            path: /examine
            pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo
  namespace: apps
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: podinfo
                port:
                  number: 80
            path: /podinfo/(.*)
            pathType: Prefix
